<resources>
    <string name="app_name">Android_Base_2025</string>

    <string name="uploadToLibrary">Uploading to Library</string>
    <string name="photoLibraryAttachPhoto">Attach Photos * (Max 50)</string>
    <string name="photoLibraryJobProject">Job/Project *</string>
    <string name="photoLibraryLocation">Location</string>
    <string name="photoLibraryPhotoFolder">Photo Folder *</string>
    <string name="photoLibraryAddingTags">Adding Tags (Applied to all attached photos)</string>
    <string name="photoLibraryAddingTagsDialog">Adding Tags</string>
    <string name="photoLibraryAddingInternalStaff">Adding Internal Staff</string>
    <string name="photoLibrarySendNotificationTo">Send email notification to</string>
    <string name="photoLibraryUploadingToLibrary">Uploading to Library</string>
    <string name="photoLibraryUpload">Upload photo</string>
    <string name="photoLibraryJobError">Job is required</string>
    <string name="photoLibraryAttachPhotoError">Attach photo is required</string>
    <string name="photoLibraryPhotoFolderError">Photo Folder is required</string>
    <string name="photoLibrarySelectInternalStaff">Please select Internal Staff</string>
    <string name="photoLibrarySelectPhotoFolderHint">Please select Photo Folder</string>
    <string name="photoLibrarySelectJobProjectHint">Please select Job/Project</string>
    <string name="photoLibrarySelectProjectLocationHint">Please select location</string>
    <string name="photoLibrarySelectTagsHint">Please select Tags</string>
    <string name="photoLibraryCommentHint">Please enter comment</string>
    <string name="photoLibraryUploadedSuccessfully">Photos have been uploaded successfully.</string>
    <string name="photoLibraryOk">OK</string>
    <string name="photoLibraryComment">Comments</string>
    <string name="photoLibrarySearchForInternalStaff">Search for Internal Staff</string>
    <string name="photoLibrarySearchForTags">Search for Tags</string>
    <string name="photoLibrarySearchForPhotoFolder">Search for Photo Folder</string>
    <string name="photoLibrarySearchForJobProject">Search for Job/Project</string>
    <string name="photoLibrarySearchForProjectLocation">Search for project location</string>
    <string name="photoLibrarySelected">%d Selected</string>
    <string name="photoLibraryUncategorized">Uncategorized</string>
    <string name="upload">Upload</string>
    <string name="please_select_your_job">Please select your job</string>
    <string name="job_project">Job/Project *</string>
    <string name="please_enter_your_comment">Please enter your comment</string>
    <string name="comment">Comment *</string>
    <string name="please_select_your_folder">Please select your folder</string>
    <string name="folder">Folder</string>
    <string name="please_enter_your_word">Please enter your word</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="test_fragment_activity">Enter user information</string>
    <string name="navigation_fragment_activity">Test navigation</string>
    <string name="default_error">Error test</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="user_data_note">User Data Note</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="linearlayout_demo">LinearLayout Demo</string>
    <string name="relativelayout_demo">RelativeLayout Demo</string>

</resources>
