<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_phone_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.android_base_2025.widget.CustomDropdownView
        android:id="@+id/ctvComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_input="@string/comment"
        app:hint_input="@string/please_enter_your_comment"
        app:error_text="@string/please_enter_your_comment"
        app:is_selected_view="false"
        app:is_required="true"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hoàn thành"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/ctvComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ConstraintLayout"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LinearLayout"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btnRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LinearLayout"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
